Getting things sorted out

--- a/Blazm.Usb/Demos/Blazm.Usb.Server/Shared/NavMenu.razor
+++ b/Blazm.Usb/Demos/Blazm.Usb.Server/Shared/NavMenu.razor
@@ -13,11 +13,20 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="busylight">
-                <span class="oi oi-plus" aria-hidden="true"></span> BusyLight
+            <NavLink class="nav-link" href="RequestDevice">
+                <span class="oi oi-plus" aria-hidden="true"></span> Request device
             </NavLink>
         </div>
-        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ListDevices">
+                <span class="oi oi-plus" aria-hidden="true"></span> List devices
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Tellstick">
+                <span class="oi oi-plus" aria-hidden="true"></span> Tellstick
+            </NavLink>
+        </div>
     </nav>
 </div>
 
