--- a/Blazm.Usb/Demos/Blazm.Usb.Server/Pages/_Host.cshtml
+++ b/Blazm.Usb/Demos/Blazm.Usb.Server/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="Blazm.Hid.Server.styles.css" rel="stylesheet" />
+    <link href="Blazm.Usb.Server.styles.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
